--- a/Web_Front/WebContent/day05_prac/jeju.css
+++ b/Web_Front/WebContent/day05_prac/jeju.css
@@ -61,6 +61,9 @@ main{
             height: 100%;
             width: 60%;
         }
+        .contentBox p{
+            line-height: 150%;
+        }
         h4{
             margin-bottom: 0px;
         }
